--- a/package.json
+++ b/package.json
@@ -39,18 +39,18 @@
   },
   "homepage": "https://github.com/springboot-angular2-tutorial/angular2-app",
   "dependencies": {
-    "@angular/common": "^2.4.6",
-    "@angular/compiler": "^2.4.6",
-    "@angular/core": "^2.4.6",
-    "@angular/forms": "^2.4.6",
-    "@angular/http": "^2.4.6",
-    "@angular/platform-browser": "^2.4.6",
-    "@angular/platform-browser-dynamic": "2.4.6",
-    "@angular/router": "3.4.6",
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+     "@angular/router": "~4.0.0",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "jquery": "^2.2.4",
-    "lodash-es": "^4.16.5",
+  "lodash-es": "^4.16.6",
     "md5-hex": "^1.1.0",
     "pluralize": "~3.0.0",
     "rxjs": "5.0.0-beta.12",
@@ -62,7 +62,7 @@
     "@angular/compiler-cli": "^2.1.0",
     "@angular/platform-server": "^2.1.0",
     "@types/jasmine": "^2.5.35",
-    "@types/lodash": "^4.14.37",
+    "@types/lodash": "^4.14.38",
     "@types/node": "^6.0.45",
     "@types/pluralize": "^0.0.27",
     "@types/source-map": "^0.1.28",
@@ -70,7 +70,7 @@
     "@types/webpack": "^1.12.35",
     "angular2-router-loader": "^0.3.2",
     "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "3.1.0",
     "codelyzer": "~1.0.0-beta.0",
     "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
@@ -94,7 +94,7 @@
     "ts-helpers": "^1.1.1",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.3",
-    "typescript": "^2.0.3",
+    "typescript": "~2.2.0",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.10",
     "webpack-merge": "~0.15.0"
